k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devlink-api
  labels:
    app: devlink-api
spec:
  selector:
    app: devlink-api
  ports:
    - name: http
      port: 5000
      targetPort: 5000
