k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devlink-web
  labels:
    app: devlink-web
spec:
  selector:
    app: devlink-web
  ports:
    - name: http
      port: 80
      targetPort: 80
